--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,42 @@ src="finalproject.js">
       onclick = "openyouchooseparampage()"
       value = "Your Choices">
     </div>
-
+    
+    
+    <div id="movieparampage">
+      <h1 id="movieparamhead">Movie Choices</h1>
+      <h4 id="movieloc">Location</h4>
+      <input name="movielocparam" type="text">Input zip code here.</input>
+      <h4 id="moviegenreparamin">Genre</h4>
+      <select name="genres">
+        <option value="Action">Action</option>
+        <option value="Horror">Horror</option>
+        <option value="Romance">Romance</option>
+        <option value="Comedy">Comedy</option>
+        <option value="Sci-Fi">Sci-Fi</option>
+        <option value="Drama">Drama</option>
+        <option value="Animated">Animated</option>
+        <option value="Any">Any Genre</option>
+      </select>
+      <h4 id="movierateparamin">Ratings</h4>
+      <select name="ratings">
+        <option value="G">G</option>
+        <option value="PG">PG</option>
+        <option value="PG13">PG-13</option>
+        <option value="R">R</option>
+        <option value="NC17">NC-17</option>
+        <option value="NR">NR</option>
+        <option value="Any">Any</option>
+      </select>
+      <div>
+        <input
+        id = "choose"
+        class = "button"
+        type = "button"
+        onclick = "choosemovie()"
+        value = "CHOOSE">
+      </div>
+    </div>
   </body>
   <h1>
 </html>
