--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ src="finalproject.js">
   <head>
     <title>Make a Decision</title>
     <link rel="stylesheet" href="finalproject.css">
-    <script type="text/javascript" src="finalproject.js"> </script>
+    <script type="text/javascript" src="finalprojecta.js"> </script>
 
   </head>
   <body>
