--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ src="finalproject.js">
 <html>
   <head>
     <title>Make a Decision</title>
-    <link rel="stylesheet" href="finalproject.css">
+    <link rel="stylesheet" href="final.css">
     <script type="text/javascript" src="finalprojecta.js"> </script>
 
   </head>
