--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@ src="finalproject.js">
 
       <input
       id = "movieparam"
-      class = "buttona"
+      class = "button"
       type = "button"
       onclick = "openmovieparampage()"
       value = "Movies">
 
       <input
       id = "activparam"
-      class = "buttona"
+      class = "button"
       type = "button"
       onclick = "openactivparampage()"
       value = "Activities">
 
       <input
       id = "foodparam"
-      class = "buttona"
+      class = "button"
       type = "button"
       onclick = "openfoodparampage()"
       value = "Food">
 
       <input
       id = "youchooseparam"
-      class = "buttona"
+      class = "button"
       type = "button"
       onclick = "openyouchooseparampage()"
       value = "Your Choices">
@@ -77,7 +77,7 @@ src="finalproject.js">
       <div>
         <input
         id = "choose"
-        class = "buttona"
+        class = "button"
         type = "button"
         onclick = "choosemovie()"
         value = "CHOOSE">
