--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ src="finalproject.js">
     <div id="movieparampage">
       <h1 id="movieparamhead">Movie Choices</h1>
       <h4 id="movieloc">Location</h4>
-      <input name="movielocparam" type="text">Input zip code here.</input>
+      <h4 input name="movielocparam" type="text">Input zip code here.</h4></input>
       <h4 id="moviegenreparamin">Genre</h4>
       <select name="genres">
         <option value="Action">Action</option>
