--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@ src="finalproject.js">
       $.getJSON("https://api.themoviedb.org/3/discover/movie?api_key=9ffb651d1c825ca7e2d3e8189fba9c11&with_release_type=2|3&region=US", function (cards) {
            $.each(cards, function (key, val) {
                $.each(val, function (index, data) {
-                 console.log(data.original_title);
+                 console.log(data.original_title)
 
                 });
            });
+            $.each(cards, function (key, val) {
+                $.each(val, function (index, data) {
+                   $("currentmovie").append(val)
+                });
+            });
+            console.log("currentmovie")
       });
     </script>
   </body>
