--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ src="finalproject.js">
                    $("currentmovie").append(val)
                 });
             });
-            console.log("currentmovie")
+            alert("currentmovie");
       });
     </script>
   </body>
