--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ src="finalproject.js">
                    $("currentmovie").append(val)
                 });
             });
-            alert("currentmovie");
+            alert(currentmovie);
       });
     </script>
   </body>
