--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ src="finalproject.js">
            });
             $.each(cards, function (key, val) {
                 $.each(val, function (index, data) {
-                   $("currentmovie").append(val)
+                   $(currentmovie).append(val)
                 });
             });
             alert(currentmovie);
