--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ src="finalproject.js">
                  console.log(data.original_title)
                 });
            });
-          $("#currentmovie").append(data.original_title);
+          $("#currentmovie").append(original_title);
       });
     </script>
   </body>
