--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ src="finalproject.js">
       id = "movieparam"
       class = "button"
       type = "button"
-      onclick = "dissapearmovie()"
+      onclick = "disappearmovie()"
       value = "Movies">
 
       <input
