--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ src="finalproject.js">
             $.each(cards, function (key, val) {
                $.each(val, function (index, data) {
                  console.log(data.original_title)
-//                   $("#currentmovie").push(data[key].original_title);
+                 currentmovie.push(data.original_title[key]);
                 });
            });
       });
