--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@ src="finalproject.js">
            });
       });
     </script>
+    <script>
+      var currentmovie = [];
+      function choosemovie() {
+        var min = 0;
+        var max = currentmovie.push();
+        var t = Math.floor(Math.random() * (max - min) ) + min;
+        return currentmovie[t];
+      }
+
+      function disappearmovie(){
+        alert(currentmovie[0]);
+        var choice = choosemovie();
+        document.getElementById("homepage").innerHTML = choice;
+      }
+
+    </script>
   </body>
   <h1>
 </html>
