--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ src="finalproject.js">
         document.getElementById("homepage").innerHTML = choice;
       }
 
-      $.getJSON("https://api.themoviedb.org/3/discover/movie?api_key=9ffb651d1c825ca7e2d3e8189fba9c11&with_release_type=2|3&region=US", function (cards) {
+      $.getJSON("https://api.themoviedb.org/3/movie/now_playing?api_key=9ffb651d1c825ca7e2d3e8189fba9c11&language=en-US&page=1", function (cards) {
             $.each(cards, function (key, val) {
                $.each(val, function (index, data) {
                  console.log(data.original_title)
