--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ src="finalproject.js">
 
 <html>
   <head>
-    <title>Make a Decision</title>
+    <title>The Final Say</title>
     <link rel="stylesheet" href="final.css">
     <script type="text/javascript" src="finalprojecta.js"> </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
