--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ src="finalproject.js">
   </head>
   <body>
     <div id="homepage">
-      <h1 id="hometitle">Make a Decision</h1>
+      <h1 id="hometitle">The Final Say</h1>
       <h5 id="homedescrip">Get on with life and just CHOOSE already</h5>
 
       <input
