--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ src="finalproject.js">
       function choosemovie() {
         var min = 0;
         var max = currentmovie.push();
-        var t = Math.floor(Math.random() * (max - min) - 1) + min;
+        var t = Math.floor(Math.random() * (max - min - 1)) + min;
         return currentmovie[t];
       }
 
