--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ src="finalproject.js">
 
 <html>
   <head>
+    <meta charset="utf-8">
     <title>The Final Say</title>
     <link rel="stylesheet" href="final.css">
     <script type="text/javascript" src="finalprojecta.js"> </script>
