--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ src="finalproject.js">
 
       function disappearmovie(){
         var choice = choosemovie();
-        document.getElementById("homepage").innerHTML = "<h2>You Should Watch</h2><div>" + choice + "</div><div> <img src='https://www.themoviedb.org/assets/2/v4/logos/208x226-stacked-green-9484383bd9853615c113f020def5cbe27f6d08a84ff834f41371f223ebad4a3c.png' alt ='The Movie Database Logo' class ='pics' style='width:60px;height:60px;'></div> <div><p id = 'sued'>This product uses the TMDb API but is not endorsed or certified by TMDb.</p></div><div><p class = 'back' onclick = 'window.location.reload();'> Back to home </p><p class = 'back' onclick = 'newchoice();'> New Movie </p></div>";
+        document.getElementById("homepage").innerHTML = "<h2>You Should Watch</h2><div class='choice'>" + choice + "</div><div> <img src='https://www.themoviedb.org/assets/2/v4/logos/208x226-stacked-green-9484383bd9853615c113f020def5cbe27f6d08a84ff834f41371f223ebad4a3c.png' alt ='The Movie Database Logo' class ='pics' style='width:60px;height:60px;'></div> <div><p id = 'sued'>This product uses the TMDb API but is not endorsed or certified by TMDb.</p></div><div><p class = 'back' onclick = 'window.location.reload();'> Back to home </p><p class = 'back' onclick = 'newchoice();'> New Movie </p></div>";
       }
 
       
