--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ src="finalproject.js">
   </head>
   <body>
     <div id="homepage">
-      <img src="https://github.com/acrinnion/thefinalsay/blob/master/logo.png" alt="The Final Say Logo" id="thefinalsay">
+      <h1 id="hometitle">The Final Say</h1>
       <h5 id="homedescrip">Get on with life and just CHOOSE already</h5>
 
       <input
